class 113 - counting logic with javascript

--- a/contador_de_palavras_e_caracteres/index.html
+++ b/contador_de_palavras_e_caracteres/index.html
@@ -24,7 +24,7 @@
 				<textarea name="input" id="input" rows="5" data_input></textarea>
 			</div>
 
-			<div class="counter" data_counter>0 caractere(s)</div>
+			<div class="counter" id="counter" data_counter>0 caractere(s)</div>
 			<button id="toggle" data_toggle>Contar palavras</button>
 		</div>
 	</body>
